// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`visual context inheritance > legacy theme output snapshot (no dedup) 1`] = `
"@layer awsui-base-theme {
body{
	--fontFamily-css:Arial;
	--textColor-css:black;
	--bgColor-css:white;
	--linkColor-css:blue;
	--spaceScaled-css:20px;
}
@media not print {.dark{
	--textColor-css:white;
	--bgColor-css:black;
	--linkColor-css:cyan;
}}
.compact{
	--spaceScaled-css:4px;
}
.legacy-top-navigation{
	--textColor-css:white;
	--bgColor-css:navy;
	--linkColor-css:cyan;
}
}"
`;

exports[`visual context inheritance > multi theme output snapshot 1`] = `
"@layer awsui-base-theme {
body{
	--fontFamily-css:Arial;
	--textColor-css:black;
	--bgColor-css:white;
	--linkColor-css:blue;
	--spaceScaled-css:20px;
}
@media not print {.dark,.top-navigation{
	--textColor-css:white;
	--bgColor-css:black;
	--linkColor-css:cyan;
}}
.compact,.compact-table{
	--spaceScaled-css:4px;
}
@media not print {.top-navigation{
	--bgColor-css:navy;
}}
.secondary{
	--linkColor-css:green;
}
@media not print {.dark.secondary,.secondary .top-navigation,.secondary.top-navigation{
	--linkColor-css:lime;
}}
@media not print {.secondary .top-navigation,.secondary.top-navigation{
	--bgColor-css:navy;
}}
}"
`;

exports[`visual context inheritance > single theme output snapshot 1`] = `
"@layer awsui-base-theme {
body{
	--fontFamily-css:Arial;
	--textColor-css:black;
	--bgColor-css:white;
	--linkColor-css:blue;
	--spaceScaled-css:20px;
}
@media not print {.dark,.top-navigation{
	--textColor-css:white;
	--bgColor-css:black;
	--linkColor-css:cyan;
}}
.compact,.compact-table{
	--spaceScaled-css:4px;
}
@media not print {.top-navigation{
	--bgColor-css:navy;
}}
}"
`;
